--- a/change-user.html
+++ b/change-user.html
@@ -40,57 +40,84 @@
         <div class="container">
             <div class="row">
                 <div class="form">
-                    <form>
+                    <form id = "EditUser" action="#" method="POST">
                         <h1>Izmena detalja o korisnicima</h1>
                         <table>
                             <tr>
                                 <td>
-                                    <label for="name">Ime*</label>
-                                    <input type="text" name="name">
+                                    <div class="valid"></div>
+                                        <label for="ime">Ime*</label>
+                                        <input type="text" name="ime" id="ime">
+                                        <div class="valid">
+                                    </div>
                                 </td>
                                 <td>
                                     <label for="lastname">Prezime*</label>
-                                    <input type="text" name="lastname">
+                                    <input type="text" name="lastname" class="prezime" id="prezime">
                                 </td>
                             </tr>
                             <tr>
                                 <td colspan="2">
                                     <label for="address">Adresa*</label>
-                                    <input type="text" name="address" id="address">
+                                    <input type="text" name="address" id="adresa">
                                 </td>
                             </tr>
                             <tr>
                                 <td>
                                     <label for="username">Korisnicko ime*</label>
-                                    <input type="text" name="username">
+                                    <input type="text" name="korisnickoIme" id="korisnickoIme">
                                 </td>
                                 <td>
                                     <label for="password">Sifra*</label>
-                                    <input type="password" name="password">
+                                    <input type="password" name="sifra" id="sifra">
                                 </td>
                             </tr>
                             <tr>
                                 <td colspan="2">
                                     <label for="email">E-mail*</label>
-                                    <input type="email" name="email" id="address">
+                                    <input type="email" name="email" id="email">
                                 </td>
                             </tr>
                             <tr>
                                 <td>
                                     <label for="date">Datum rodjenja*</label>
-                                    <input type="date" name="date">
+                                    <input type="date" name="datum" id="datum">
                                 </td>
                                 <td>
                                     <label for="number">Broj telefona*</label>
-                                    <input type="text" name="number">
+                                    <input type="text" name="brTelefona" id="brTelefona">
                                 </td>
                             </tr>
                             <tr>
-                                <td colspan="2"><a href="#" class="btn">Izmeni</a></td>
+                                <td colspan="2"><button type="submit" id="btn_submit" class="btn">IZMENI</button></td>
                             </tr>  
                         </table>
                     </form>
                 </div>
+            </div>
+        </div>
+
+        <!-- --------------------- login popup -------------- -->
+        <div class="popup" id="popup" >
+            <div class="popup-content" id="popup-content" >
+                <img src="slike/account.png" width="70px">
+
+                <form class="content" id="LoginForm" action="#" method="POST">   
+                    <input type="text" placeholder="Korisnicko Ime"  id="korisnickoIme">
+                    <input type="password" placeholder="Sifra" name="sifra" id="sifra">
+                    <button type="submit" class="btn" id="btn_submit" >Prijava</button> <br>
+                    <a href="#" id="createAcc"><i>Nemate nalog? </i></a>
+                    <a href="#" id="forgotten"> <i> Zaboravio/la sifru? </i></a>
+                </form>
+
+                <form action="#" class="content" id="RegForm" name = "myForm" method="POST">
+                    <input type="text" placeholder="Ime" id="ime">
+                    <input type="text" placeholder="Prezime" id="prezime">
+                    <input type="email" placeholder="Email" id="email">
+                    <input type="text" placeholder="Korisnicko Ime" id="korisnickoIme">
+                    <input type="password" placeholder="Sifra" id="sifra">
+                    <button type="submit" class="btn" id="btn_submit">Registracija</button>
+                </form> 
             </div>
         </div>
     </main>
@@ -135,7 +162,11 @@
 
     <!-- ---------------js------------------>
 
+    <!-- <script src="js/main.js"></script> -->
+    <script src="js/validacijeKorisnika.js"></script>
+    <script src="js/validacijeLogin.js"></script>
     <script src="js/main.js"></script>
+    
 
 </body>
 </html>
